# itodo

./: .gitignore  Makefile  README.md  pyproject.toml
src/account/: admin.py  authentication.py  models.py
src/account/migrations/: 0001_initial.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/todo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/todo/migrations/: 0001_initial.py  0002_tguser_alter_task_owner.py  0003_alter_task_owner_delete_tguser.py  0004_remove_task_description.py
